[metadata]
name = "randomchar"
author = "Franklin Ikeh"
author-email = ikehfranklind3c0d3r@gmail.com
home-page = https://github.com/fr4nkl1n-1k3h/randomchar
description = "simple random character generator"
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
